--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,20 @@
 * {
     box-sizing: border-box;
 }
+* img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 
 .page-wrapper {
     background-color: #f4f4f7;
-    padding: 0 130px;
     font-family: "Roboto";
     overflow: hidden;
+}
+
+.wrapper {
+    padding: 0 130px;
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -126,6 +134,7 @@
     z-index: 2;
     width: 40px;
     height: 40px;
+    padding: 10px;
 }
 
 
@@ -138,7 +147,7 @@
     background: transparent;
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 50%;
-    padding: 10px;
+
     color: rgba(244, 244, 247, 1);
 }
 
@@ -341,13 +350,14 @@
 .work__item {
     background-color: #64cae1;
     padding: 40px;
+    padding-top: 45px;
     color: #f4f4f7;
     width: 380px;
     min-height: 380px;
 }
 
 .work__subtitle {
-    font-size: 13px;
+    font-size: 15px;
     line-height: 20px;
     font-weight: 900;
     letter-spacing: 1.75px;
@@ -406,7 +416,7 @@
 }
 
 .team__main-content {
-    background: url("../images/jpg_png/img-team-home.jpg") no-repeat ;
+    background: url("../images/jpg_png/img-team-home.jpg") no-repeat;
     background-size: contain;
     height: 600px;
     padding: 200px 200px 20px 0;
@@ -443,7 +453,7 @@
 /* inside frontbyte section */
 .inside {
     position: relative;
-    margin-bottom: 80px;
+    margin-bottom: 75px;
 }
 
 .heading-section {
@@ -475,7 +485,8 @@
 .inside__background {
     position: relative;
 }
-.inside__background img{
+
+.inside__background img {
     width: 980px;
     height: 600px;
 }
@@ -561,7 +572,7 @@
 /* footer */
 .footer {
     background-color: #000;
-    padding: 100px 30px 25px 200px;
+    padding: 92px 30px 35px 200px;
     color: #f4f4f7;
     position: relative;
 }
@@ -579,7 +590,7 @@
     position: absolute;
     z-index: 1;
     right: 0;
-    top: 75px;
+    top: 85px;
 }
 
 .footer p, .footer h3 {
@@ -589,17 +600,19 @@
 .footer__heading {
     display: flex;
     align-items: baseline;
-    margin-bottom: 75px;
+    margin-bottom: 78px;
     margin-left: 0;
 }
 
 .footer__link+.footer__link {
     margin-left: 25px;
 }
-.footer__link img{
+
+.footer__link img {
     width: 30px;
     height: 30px;
 }
+
 .footer__cities {
     display: flex;
     margin-bottom: 90px;
@@ -607,7 +620,7 @@
 
 .footer__city {
     width: 380px;
-    margin-right: 115px;
+    margin-right: 118px;
 }
 
 .footer__city:last-child {
@@ -619,7 +632,9 @@
     margin-bottom: 0;
     width: 380px;
 }
-.footer__social{}
+
+.footer__social {}
+
 .footer__subtitle {
     font-size: 20px;
     line-height: 30px;
@@ -653,6 +668,7 @@
     z-index: 2;
     position: relative;
 }
+
 .footer__link-drop {
     height: 80px;
     position: absolute;
@@ -666,7 +682,7 @@
     display: inline-block;
     font-size: 20px;
     line-height: 30px;
-    border: 1px solid rgba(0, 0, 0, 1);
+    border: 1px solid transparent;
     padding: 25px 100px 25px 200px;
     width: 580px;
     transition: .2s ease;
@@ -694,7 +710,7 @@
     left: 100%;
     display: inline-block;
     width: 300px;
-    transform: translate(80px, -50%);
+    transform: translate(119px, -50%);
     color: rgba(244, 244, 247, 0.5);
     font-size: 20px;
     line-height: 30px;
