--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 * {
     box-sizing: border-box;
 }
-* img{
+
+* img {
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -69,13 +70,13 @@
 }
 
 .header__nav {
-    margin-left: 120px;
+    margin-left: 119px;
     max-height: 40px;
 }
 
 .header__menu-link {
     color: rgba(244, 244, 247, 0.5);
-    margin-right: 50px;
+    margin-right: 47px;
     font-size: 15px;
     line-height: 20px;
     font-weight: 300;
@@ -96,6 +97,7 @@
 }
 
 .header__title {
+    max-height: 100%;
     font-size: 60px;
     line-height: 65px;
     font-weight: 900;
@@ -130,11 +132,10 @@
     color: rgba(244, 244, 247, 0.5);
     font-size: 15px;
     line-height: 20px;
-    margin-right: 22px;
+    margin-right: 33px;
     z-index: 2;
     width: 40px;
     height: 40px;
-    padding: 10px;
 }
 
 
@@ -144,11 +145,21 @@
 
 /* Checked */
 .header__lang-list input[type=radio]:checked+label {
-    background: transparent;
+    position: relative;
+}
+
+.header__lang-list input[type=radio]:checked+label::after {
+    content: "";
+    position: absolute;
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 50%;
-
     color: rgba(244, 244, 247, 1);
+    z-index: 2;
+    width: 40px;
+    height: 40px;
+    left: 0;
+    top: 0;
+    transform: translate(-28%, -29%);
 }
 
 .header__link-item {
@@ -158,7 +169,7 @@
     position: relative;
     line-height: 30px;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 25px 100px 25px 200px;
+    padding: 23px 100px 25px 200px;
     z-index: 2;
     width: 580px;
     transition: .2s ease;
@@ -184,7 +195,7 @@
 .about {
     background-color: #ffffff;
     padding: 90px 140px 100px 200px;
-    margin-bottom: 100px;
+    margin-bottom: 104px;
 }
 
 .about__title {
@@ -225,7 +236,7 @@
     background-color: #f47e3d;
     border-radius: 50%;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     display: inline-block;
     position: relative;
 }
@@ -236,23 +247,37 @@
 
 .about__icon::after {
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
+    max-width: 56px;
+    max-height: 61px;
     transform: translate(-50%, -50%);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .about__item:nth-child(2) .about__icon::after {
-    content: url("../images/svg/ic-hire.svg");
+    content: "";
+    background-image: url("../images/svg/ic-hire.svg");
+    background-position: 30% 20%;
     transform: translate(-30%, -45%);
+    width: 26px;
+    height: 61px;
 }
 
 .about__item:first-child .about__icon::after {
-    content: url("../images/svg/ic-project.svg");
+    content: "";
+    background-image: url("../images/svg/ic-project.svg");
     transform: translate(-50%, -40%);
+    width: 50px;
+    height: 52px;
 }
 
 .about__item:last-child .about__icon::after {
-    content: url("../images/svg/ic-digital.svg");
+    content: "";
+    background-image: url("../images/svg/ic-digital.svg");
+    width: 56px;
+    height: 43px;
 }
 
 .about__item:first-child>.about__icon {
@@ -341,7 +366,7 @@
 .work__main-content {
     background-image: url("../images/jpg_png/vid-birdieeyes.jpg");
     background-repeat: no-repeat;
-    width: 1180px;
+    background-size: cover;
     height: 600px;
     padding: 200px 0 20px 200px;
     margin-bottom: 20px;
@@ -412,7 +437,7 @@
 
 /* work team */
 .team {
-    margin-bottom: 100px;
+    margin-bottom: 95px;
 }
 
 .team__main-content {
@@ -534,19 +559,28 @@
 }
 
 /* news cards */
+.news {
+    margin-bottom: 100px;
+}
 
 .news__cards {
     display: flex;
+
 }
 
 .news-title {
     display: inline-block;
+    font-weight: 900;
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: 1.75px;
+    text-transform: uppercase;
+    margin-bottom: 50px;
 }
 
 .news__article {
     max-width: 280px;
     font-weight: 300;
-    margin-bottom: 100px;
     max-height: 100px;
 }
 
@@ -572,7 +606,7 @@
 /* footer */
 .footer {
     background-color: #000;
-    padding: 92px 30px 35px 200px;
+    padding: 95px 30px 35px 200px;
     color: #f4f4f7;
     position: relative;
 }
@@ -589,8 +623,8 @@
 .footer__background {
     position: absolute;
     z-index: 1;
-    right: 0;
-    top: 85px;
+    right: -25px;
+    top: 75px;
 }
 
 .footer p, .footer h3 {
@@ -615,7 +649,7 @@
 
 .footer__cities {
     display: flex;
-    margin-bottom: 90px;
+    margin-bottom: 115px;
 }
 
 .footer__city {
@@ -632,8 +666,6 @@
     margin-bottom: 0;
     width: 380px;
 }
-
-.footer__social {}
 
 .footer__subtitle {
     font-size: 20px;
@@ -699,9 +731,9 @@
     transform: translate(-50px, -40px);
 }
 
-.link-item:hover {
+.footer__link-drop a:hover {
     color: rgba(244, 244, 247, 1);
-    background-color: rgba(244, 244, 247, 0.1);
+    background-color: rgba(100, 202, 225, 0.3);
 }
 
 .copyright {
