--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,22 @@
 * img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
+}
+
+/* scrollbar */
+p {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+p::-webkit-scrollbar {
+    background-color: rgba(244, 244, 247, 0.5);
+    width: 3px;
+}
+
+p::-webkit-slider-thumb {
+    background-color: rgba(244, 244, 247, 0.11);
 }
 
 .page-wrapper {
@@ -18,16 +33,18 @@
 }
 
 .wrapper {
-    padding: 0 130px;
-    max-width: 1440px;
+    max-width: 1180px;
     margin: 0 auto;
 }
 
 /* Header */
+.header__background-image {
+    position: absolute;
+}
+
 .header {
     position: relative;
     margin-bottom: 100px;
-    background: url(../images/jpg_png/img-header.jpg) no-repeat;
     max-height: 680px;
 }
 
@@ -112,9 +129,11 @@
     font-size: 20px;
     line-height: 30px;
     font-weight: 300;
+    max-height: 60px;
     margin-bottom: 80px;
+    position: relative;
+    color: rgba(244, 244, 247, 0.5);
     z-index: 2;
-    color: rgba(244, 244, 247, 1);
 }
 
 .header__lang-list {
@@ -213,6 +232,7 @@
     line-height: 40px;
     letter-spacing: 0;
     margin-bottom: 85px;
+    max-height: 40px;
 }
 
 .about__items {
@@ -302,6 +322,10 @@
     display: flex;
 }
 
+.about__text {
+    max-height: 90px;
+}
+
 .about__list {
     font-weight: 300;
     font-size: 20px;
@@ -364,12 +388,13 @@
 }
 
 .work__main-content {
-    background-image: url("../images/jpg_png/vid-birdieeyes.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    position: relative;
     height: 600px;
-    padding: 200px 0 20px 200px;
     margin-bottom: 20px;
+}
+
+.work__background-image {
+    position: absolute;
 }
 
 .work__item {
@@ -379,6 +404,9 @@
     color: #f4f4f7;
     width: 380px;
     min-height: 380px;
+    position: absolute;
+    right: 51%;
+    bottom: 15px;
 }
 
 .work__subtitle {
@@ -394,6 +422,7 @@
     line-height: 40px;
     font-weight: 300;
     max-width: 380px;
+    max-height: 240px;
 }
 
 .work__cards {
@@ -402,9 +431,13 @@
 }
 
 .work__card {
-    max-width: 580px;
+    width: 580px;
     color: #2d2d42;
     margin-bottom: 70px;
+}
+
+.work__card img {
+    max-height: 320px;
 }
 
 .work__card:nth-child(odd) {
@@ -433,6 +466,7 @@
     font-size: 30px;
     line-height: 40px;
     max-width: 440px;
+    max-height: 160px;
 }
 
 /* work team */
@@ -441,16 +475,27 @@
 }
 
 .team__main-content {
-    background: url("../images/jpg_png/img-team-home.jpg") no-repeat;
-    background-size: contain;
     height: 600px;
-    padding: 200px 200px 20px 0;
-    display: flex;
-    justify-content: flex-end;
+    position: relative;
+}
+.team__description{
+    max-height: 160px;
+}
+
+.team__background-image {
+    position: absolute;
+
 }
 
 .team__card {
     background-color: #f4f4f7;
+    padding: 40px;
+    color: #2d2d42;
+    width: 380px;
+    min-height: 380px;
+    position: absolute;
+    left: 51%;
+    bottom: 22px;
 }
 
 .info-card {
@@ -458,6 +503,9 @@
     color: #2d2d42;
     width: 380px;
     min-height: 380px;
+    position: absolute;
+    left: 51%;
+    bottom: 22px;
 }
 
 .title-card {
@@ -537,6 +585,7 @@
 
 .inside__description {
     margin-bottom: 55px;
+    max-height: 160px;
 }
 
 .tabs {
@@ -594,6 +643,7 @@
     color: #2d2d42;
     margin-bottom: 20px;
     font-weight: 300;
+    max-height: 60px;
 }
 
 .news__date {
@@ -699,6 +749,7 @@
     max-width: 380px;
     z-index: 2;
     position: relative;
+    max-height: 90px;
 }
 
 .footer__link-drop {
