--- a/css/style.css
+++ b/css/style.css
@@ -478,8 +478,19 @@ p::-webkit-slider-thumb {
     height: 600px;
     position: relative;
 }
+.team__title{
+    font-weight: 900;
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: 1.75px;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+}
 .team__description{
     max-height: 160px;
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 40px;
 }
 
 .team__background-image {
@@ -498,25 +509,6 @@ p::-webkit-slider-thumb {
     bottom: 22px;
 }
 
-.info-card {
-    padding: 40px;
-    color: #2d2d42;
-    width: 380px;
-    min-height: 380px;
-    position: absolute;
-    left: 51%;
-    bottom: 22px;
-}
-
-.title-card {
-    font-weight: 900;
-    font-size: 13px;
-    line-height: 20px;
-    letter-spacing: 1.75px;
-    text-transform: uppercase;
-    margin-bottom: 50px;
-}
-
 .text-card {
     font-weight: 300;
     font-size: 30px;
@@ -528,11 +520,27 @@ p::-webkit-slider-thumb {
     position: relative;
     margin-bottom: 75px;
 }
-
+.inside__heading{
+    margin: 0 130px 0 200px;
+}
 .heading-section {
     margin: 0 130px 0 200px;
 }
-
+.inside__title{
+    margin-bottom: 25px;
+    font-size: 60px;
+    line-height: 65px;
+    font-weight: 900;
+    letter-spacing: -0.75px;
+}
+.inside__card-title{
+    font-weight: 900;
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: 1.75px;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+}
 .title-section {
     margin-bottom: 25px;
     font-size: 60px;
@@ -553,6 +561,9 @@ p::-webkit-slider-thumb {
 
 .inside__subtitle {
     margin-bottom: 90px;
+    font-size: 30px;
+    line-height: 40px;
+    font-weight: 300;
 }
 
 .inside__background {
@@ -586,6 +597,9 @@ p::-webkit-slider-thumb {
 .inside__description {
     margin-bottom: 55px;
     max-height: 160px;
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 40px;
 }
 
 .tabs {
@@ -656,7 +670,7 @@ p::-webkit-slider-thumb {
 /* footer */
 .footer {
     background-color: #000;
-    padding: 95px 30px 35px 200px;
+    padding: 94px 30px 35px 200px;
     color: #f4f4f7;
     position: relative;
 }
@@ -715,6 +729,10 @@ p::-webkit-slider-thumb {
     margin-right: 115px;
     margin-bottom: 0;
     width: 380px;
+    font-size: 60px;
+    line-height: 65px;
+    font-weight: 900;
+    letter-spacing: -0.75px;
 }
 
 .footer__subtitle {
@@ -745,11 +763,14 @@ p::-webkit-slider-thumb {
 
 .footer__description {
     display: inline-block;
-    margin-bottom: 90px;
+    margin-bottom: 85px;
     max-width: 380px;
     z-index: 2;
     position: relative;
     max-height: 90px;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 300;
 }
 
 .footer__link-drop {
