--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,42 @@ a {
     margin: 0 auto;
 }
 
+.title {
+    font-size: 60px;
+    line-height: 65px;
+    font-weight: 900;
+    letter-spacing: -0.75px;
+    color: #2d2d42;
+}
+
+.subtitle-text {
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 40px;
+    color: #2d2d42;
+    letter-spacing: 0;
+}
+
+.medium-text {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0;
+    color: #2d2d42;
+}
+
 .b-container {
     margin: 90px 0 100px;
 }
 
-.cropped{
+/* crop text if line>6 */
+.cropped {
     -webkit-line-clamp: 6;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
 /* Header */
 .header__background-wrapper {
     position: absolute;
@@ -61,7 +87,7 @@ a {
     left: 0;
     right: 0;
     bottom: 0;
-    background: black;
+    background: #000;
     opacity: 0.4;
     z-index: 1;
 }
@@ -108,7 +134,6 @@ a {
     cursor: pointer;
     z-index: 2;
     position: relative;
-    letter-spacing: normal;
 }
 
 .header__menu-link:last-child {
@@ -119,19 +144,16 @@ a {
     color: #fff;
 }
 
-.header__title {
+.header--title {
     max-height: 100%;
-    font-size: 60px;
-    line-height: 65px;
-    font-weight: 900;
-    letter-spacing: -0.75px;
     color: #f4f4f7;
     margin-bottom: 30px;
     position: relative;
     z-index: 2;
 }
 
-.header__description {
+.header--description {
+    display: inline-flex;
     font-size: 20px;
     line-height: 30px;
     font-weight: 300;
@@ -187,12 +209,10 @@ a {
     transform: translate(-28%, -29%);
 }
 
-.header__link-item {
+.header--link-item {
     color: rgba(244, 244, 247, 0.5);
     display: inline-block;
-    font-size: 20px;
     position: relative;
-    line-height: 30px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     padding: 23px 100px 25px 200px;
     z-index: 2;
@@ -200,7 +220,7 @@ a {
     transition: color 0.3s, background-color 0.3s;
 }
 
-.header__link-item::after {
+.header--link-item::after {
     content: url("../images/svg/ic-next.svg");
     color: #f4f4f7;
     width: 30px;
@@ -211,7 +231,7 @@ a {
     transform: translate(-50px, -40px);
 }
 
-.header__link-item:hover {
+.header--link-item:hover {
     color: rgba(244, 244, 247, 1);
     background-color: rgba(244, 244, 247, 0.1);
 }
@@ -226,21 +246,12 @@ a {
     margin-bottom: 104px;
 }
 
-.about__title {
-    color: #2d2d42;
-    font-size: 60px;
-    line-height: 65px;
-    letter-spacing: -0.75px;
+.about--title {
     margin-bottom: 30px;
-    font-weight: 900;
     max-width: 780px;
 }
 
-.about__description {
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 40px;
-    letter-spacing: 0;
+.about--description {
     margin-bottom: 85px;
     max-height: 40px;
 }
@@ -261,7 +272,7 @@ a {
     width: 240px;
 }
 
-.about__icon {
+.about--icon {
     width: 90px;
     height: 90px;
     background-color: #f47e3d;
@@ -276,7 +287,7 @@ a {
     margin-left: 60px;
 }
 
-.about__icon::after {
+.about--icon::after {
     position: absolute;
     top: 45%;
     left: 50%;
@@ -287,7 +298,7 @@ a {
     background-repeat: no-repeat;
 }
 
-.about__item:nth-child(2) .about__icon::after {
+.middle-icon::after {
     content: "";
     background-image: url("../images/svg/ic-hire.svg");
     background-position: 30% 20%;
@@ -296,7 +307,7 @@ a {
     height: 61px;
 }
 
-.about__item:first-child .about__icon::after {
+.left-icon::after {
     content: "";
     background-image: url("../images/svg/ic-project.svg");
     transform: translate(-50%, -40%);
@@ -304,26 +315,22 @@ a {
     height: 52px;
 }
 
-.about__item:last-child .about__icon::after {
+.right-icon::after {
     content: "";
     background-image: url("../images/svg/ic-digital.svg");
     width: 56px;
     height: 43px;
 }
 
-.about__item:first-child>.about__icon {
+.left-icon {
     background-color: #63c9e0;
 }
 
-.about__item:nth-child(3)>.about__icon {
+.right-icon {
     background-color: #d04b9b;
 }
 
-.about__subtitle {
-    font-weight: 900;
-    font-size: 60px;
-    line-height: 65px;
-    letter-spacing: -0.75px;
+.about--subtitle {
     color: #c0c6c8;
     margin-bottom: 75px;
     max-width: 680px;
@@ -337,22 +344,14 @@ a {
     max-height: 90px;
 }
 
-.about__list {
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 0;
-    color: #2d2d42;
+.about--list {
     flex: 1 0 380px;
     padding-left: 60px;
     margin-left: -60px;
-}
-
-.about__list {
     margin-right: 120px;
 }
 
-.about__list:last-child {
+.about--list:last-child {
     margin-right: 0;
     padding-left: 80px;
 }
@@ -388,18 +387,8 @@ a {
     color: #2d2d42;
 }
 
-.work__title {
+.work--title {
     margin-bottom: 25px;
-    font-size: 60px;
-    line-height: 65px;
-    font-weight: 900;
-    letter-spacing: -0.75px;
-}
-
-.work__title-desc {
-    font-size: 30px;
-    line-height: 40px;
-    font-weight: 300;
 }
 
 .work__main-content {
@@ -424,20 +413,16 @@ a {
     bottom: 15px;
 }
 
+.work__item p {
+    color: inherit;
+}
+
 .work__subtitle {
     font-size: 15px;
     line-height: 20px;
     font-weight: 900;
     letter-spacing: 1.75px;
     margin-bottom: 40px;
-}
-
-.work__description {
-    font-size: 30px;
-    line-height: 40px;
-    font-weight: 300;
-    max-width: 380px;
-    max-height: 240px;
 }
 
 .work__cards {
@@ -451,6 +436,12 @@ a {
     margin-bottom: 70px;
     position: relative;
     cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.work__card:hover, .news__article:hover {
+    transform: scale(1.03);
+    z-index: 3;
 }
 
 .work__card::before, .news__article::before {
@@ -499,10 +490,7 @@ a {
     margin-bottom: 30px;
 }
 
-.work__article-description {
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 40px;
+.work--article-description {
     max-width: 440px;
     max-height: 160px;
 }
@@ -512,7 +500,7 @@ a {
 .team__main-content {
     height: 600px;
     position: relative;
-    margin-bottom: 95px;
+    margin-bottom: 100px;
 }
 
 .team__title {
@@ -522,13 +510,6 @@ a {
     letter-spacing: 1.75px;
     text-transform: uppercase;
     margin-bottom: 50px;
-}
-
-.team__description {
-    max-height: 160px;
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 40px;
 }
 
 .team__background-image {
@@ -557,7 +538,7 @@ a {
 /* inside frontbyte section */
 .inside {
     position: relative;
-    margin-bottom: 75px;
+    margin-bottom: 71px;
 }
 
 .inside__heading {
@@ -568,12 +549,8 @@ a {
     margin: 0 130px 0 200px;
 }
 
-.inside__title {
+.inside--title {
     margin-bottom: 25px;
-    font-size: 60px;
-    line-height: 65px;
-    font-weight: 900;
-    letter-spacing: -0.75px;
 }
 
 .inside__card-title {
@@ -605,9 +582,6 @@ a {
 
 .inside__subtitle {
     margin-bottom: 90px;
-    font-size: 30px;
-    line-height: 40px;
-    font-weight: 300;
 }
 
 .inside__background {
@@ -638,12 +612,8 @@ a {
     padding: 40px 60px 0 0;
 }
 
-.inside__description {
+.inside--description {
     margin-bottom: 55px;
-    max-height: 160px;
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 40px;
 }
 
 .tabs {
@@ -682,7 +652,7 @@ a {
 
 .news__cards {
     display: flex;
-
+    overflow: hidden;
 }
 
 .news-title {
@@ -698,22 +668,18 @@ a {
 .news__article {
     max-width: 280px;
     font-weight: 300;
-    max-height: 100px;
     position: relative;
     cursor: pointer;
+    flex-shrink: 0;
+    transition: transform 0.1s;
 }
 
 .news__article+.news__article {
     margin-left: 120px;
 }
 
-.description-card {
-    font-size: 20px;
-    line-height: 30px;
-    color: #2d2d42;
+.description--card {
     margin-bottom: 20px;
-    font-weight: 300;
-    max-height: 60px;
 }
 
 .news__date {
@@ -802,14 +768,11 @@ a {
     margin-right: 0;
 }
 
-.footer__title {
+.footer--title {
     margin-right: 115px;
     margin-bottom: 0;
     width: 380px;
-    font-size: 60px;
-    line-height: 65px;
-    font-weight: 900;
-    letter-spacing: -0.75px;
+    color: inherit;
 }
 
 .footer__subtitle {
@@ -838,16 +801,12 @@ a {
     color: #f4f4f7;
 }
 
-.footer__description {
+.footer--description {
     display: inline-block;
     margin-bottom: 90px;
     max-width: 380px;
     z-index: 2;
     position: relative;
-    max-height: 90px;
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 300;
 }
 
 .footer__link-drop {
