--- a/css/style.css
+++ b/css/style.css
@@ -51,10 +51,6 @@ body {
     color: #2d2d42;
 }
 
-.b-container {
-    margin: 0 200px;
-}
-
 /* crop text if line>6 */
 .cropped {
     -webkit-line-clamp: 6;
@@ -222,7 +218,7 @@ body {
     background-color: rgba(244, 244, 247, 0.1);
 }
 
-/* ====================end of section title */
+/* ====================end of section title ===================== */
 
 /* section about us */
 .about {
@@ -272,6 +268,12 @@ body {
     display: inline-block;
     position: relative;
 }
+/* for IE */
+.about__icon img{
+    max-height: 61px;
+    max-width: 56px;
+}
+/* end */
 
 .about__icon img {
     position: absolute;
